# perf-agent

./: Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: license_check.yml  lint.yml  release.yml
deploy/kubernetes/: daemon.yaml
docker-build/scripts/: start-daemon.sh  start-debug-log.sh  start-debug.sh  start-trace-output-log.sh  start-trace.sh
src/: main.rs
src/docker/: influx.rs  mod.rs
src/report/: mod.rs
src/util/: mod.rs
