#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

[package]
name = "perf-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.14"
chan = "0.1.23"
chan-signal = "0.3.3"
chrono = "0.4"
fern = "0.6.2"
futures-util = "0.3.28"
lazy_static = "1.4.0"
influxdb = { version = "0.7.0", features = ["derive"] }
log = "0.4"
lru = "0.11.0"
serde = { version = "1.0.183", features = ["derive"] }
serde-env = "0.1.1"
tokio = { version = "1.31.0", features = ["full"] }

